@@ -1568,6 +1568,11 @@ WIDGET_DEFAULT = {
         "ffb_color": "#888888",
         "ffb_line_width": 2,
         "ffb_line_style": 0,
+        "show_wheel_lock": True,
+        "wheel_lock_color": "#FFFF00",
+        "wheel_lock_line_width": 6,
+        "wheel_lock_line_style": 1,
+        "wheel_lock_threshold": 0.3,
         "show_reference_line": True,
         "reference_line_1_style": 0,
         "reference_line_1_offset": 0.25,
